# yambot

./: .gitignore  Cargo.toml  LICENSE  README.md  token.txt
examples/: simple_echo_bot.rs
src/: bot.rs  client.rs  config.rs  error.rs  lib.rs
src/events/: dispatcher.rs  handler.rs  mod.rs
src/types/: bot_request.rs  button.rs  chat.rs  directive.rs  file.rs  image.rs  inline_suggest_button.rs  message.rs  mod.rs  requests.rs  sender.rs  suggest_buttons.rs  update.rs
